# mcp-scoring-engine

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mcp_scoring_engine/: __init__.py  badges.py  classification.py  flags.py  scoring.py  security.py  types.py
src/mcp_scoring_engine/probes/: entry_point.py  github_client.py  health.py  protocol.py  reliability.py  spec_version.py  static.py
tests/: conftest.py  test_badges.py  test_classification.py  test_flags.py  test_integration.py  test_maintenance_pulse.py  test_new_features.py  test_probes_reliability.py  test_scoring.py
