[project]
name = "mcp-scoring-engine"
version = "0.1.0"
description = "Scoring engine for MCP server quality assessment"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mcp>=1.26",
    "httpx",
    "httpx-sse",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_scoring_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
