[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-scoring-engine"
version = "0.7.0"
description = "Scoring engine for MCP server quality assessment"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Brightwing Systems LLC", email = "support@brightwingsystems.com" },
]
keywords = ["mcp", "scoring", "quality", "model-context-protocol", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.26",
    "httpx",
    "httpx-sse",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "respx>=0.22",
]

[project.urls]
Homepage = "https://mcpscoreboard.com"
Repository = "https://github.com/Brightwing-Systems-LLC/mcp-scoring-engine"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_scoring_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
